fix shift responsiveness

--- a/assets/stylesheets/components/grid.scss
+++ b/assets/stylesheets/components/grid.scss
@@ -1,4 +1,5 @@
 $padding: 1em;
+$large-breakpoint: 600px;
 
 .grid-full-width {
   @include outer-container(100%);
@@ -9,7 +10,11 @@ $padding: 1em;
 }
 
 .omega {
-  @include omega;
+
+
+  @include media(600px) {
+    @include omega;
+  };
 }
 
 .grid-6 {
@@ -17,7 +22,7 @@ $padding: 1em;
   padding-left: $padding;
   padding-right: $padding;
 
-  @include media(600px) {
+  @include media($large-breakpoint) {
     @include span-columns(6);
   };
 }
@@ -27,19 +32,31 @@ $padding: 1em;
   padding-left: $padding;
   padding-right: $padding;
 
-  @include media(600px) {
+  @include media($large-breakpoint) {
     @include span-columns(8);
   };
 }
 
 .shift-6 {
-  @include shift(6);
+  @include shift(0);
+
+  @include media($large-breakpoint) {
+    @include shift(6);
+  };
 }
 
 .shift-3 {
-  @include shift(3);
+  @include shift(0);
+
+  @include media($large-breakpoint) {
+    @include shift(3);
+  };
 }
 
 .shift-2 {
-  @include shift(2);
+  @include shift(0);
+
+  @include media($large-breakpoint) {
+    @include shift(2);
+  };
 }
